# instant-transmission

./: .gitignore  LICENSE  README.md  build-thesis.sh
.data/: DataProcessor.fsx  avgThroughputGraphScript.gnu  dataReceivedCount.sh  maxThroughputGraphScript.gnu  packetLossGraphScript.gnu
.data/client/: dc-throughput-per-second.csv  qc-packet-capture.csv  qc-throughput-per-second.csv  quad-channel-1400B-transfer-1GB.raw  sc-throughput-per-second.csv  throughputGraphScript.gnu
.data/server/: dc-throughput-per-second.csv  qc-packet-capture.csv  qc-throughput-per-second.csv  quad-channel-1400B-transfer-1GB.raw  sc-throughput-per-second.csv  throughputGraphScript.gnu
fsharp/: Local.Microsoft.Common.targets  MUDT.config  MUDT.sln  MUDT.userprefs  build-native.sh  build.fsx  build.sh  paket.dependencies
fsharp/.native/: MUDT.Native.Apple.dylib  MUDT.Native.Linux.dylib  System.Security.Cryptography.Native.Apple.dylib  System.Security.Cryptography.Native.Apple.dylib.old  System.Security.Cryptography.Native.OpenSsl.dylib  System.Security.Cryptography.Native.OpenSsl.dylib.old  System.Security.Cryptography.Native.dylib  System.Security.Cryptography.Native.dylib.old
fsharp/src/: MUDT.compile  MUDT.compile.targets  MUDT.fsproj  Program.fs  (+4 more)
fsharp/src/Native/MUDT.Native.Apple/: CMakeLists.txt  Makefile  pal_io.cpp  pal_io.h
fsharp/src/Native/MUDT.Native.Linux/: CMakeLists.txt  Makefile  pal_io.cpp  pal_io.h
fsharp2/: MCDTP.sln
java/: pom.xml
presentation/: Thesis.pptx  ~$Thesis.pptx
thesis/: Bibliography.bib  Thesis.cls  Thesis.tex  build.fsx  fsharp-listings.tex
(+149 files in other folders)
